<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="task"
            type="seamonster.kraken.tasks.Task" />
        <import type="android.view.View"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:navigationIcon="@drawable/round_close_36"
                app:title="@string/edit_task">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="12dp"
                    android:text="@string/save"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:layout_gravity="end"
                    android:visibility="@{task.id&lt;1?View.GONE:View.VISIBLE}"
                    android:contentDescription="@string/delete_task"
                    app:icon="@drawable/round_delete_48"
                    app:iconTint="#EC0000"
                    style="?materialIconButtonOutlinedStyle"/>
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior=
                "com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="12dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    app:hintEnabled="@{task.title.empty?true:false}"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:layout_constraintTop_toTopOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:text="@={task.title}"
                        android:textSize="18sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/description"
                    app:hintEnabled="@{task.desc.empty?true:false}"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/textTitle">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:text="@={task.desc}"
                        android:padding="12dp"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_a_category"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textDesc" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:selectionRequired="true"
                    app:singleSelection="true"
                    app:layout_constraintTop_toBottomOf="@id/textView"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkBoxImportant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_as_important"
                    android:checked="@={task.important}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chipGroupCategories" />

                <com.google.android.material.button.MaterialButton
                    style="?materialIconButtonOutlinedStyle"
                    android:id="@+id/btnSetDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:contentDescription="@string/set_date"
                    android:text="@{task.year==0?`Set date`:task.day+`/`+task.month+`/`+task.year}"
                    app:icon="@drawable/round_edit_calendar_36"
                    app:iconSize="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxImportant" />

                <com.google.android.material.button.MaterialButton
                    style="?materialIconButtonOutlinedStyle"
                    android:id="@+id/btnSetTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:contentDescription="@string/set_time"
                    android:text="@{task.year==0?``:task.hour + `:` + task.minute}"
                    android:visibility="@{task.year==0?View.INVISIBLE:View.VISIBLE}"
                    app:icon="@drawable/round_access_time_48"
                    app:iconSize="24dp"
                    app:layout_constraintStart_toEndOf="@id/btnSetDate"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxImportant" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkBoxRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat"
                    android:checked="@={task.repeat}"
                    android:visibility="@{task.year==0?View.INVISIBLE:View.VISIBLE}"
                    app:layout_constraintStart_toEndOf="@+id/btnSetTime"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxImportant" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupRF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{task.repeat?View.VISIBLE:View.GONE}"
                    app:singleSelection="true"
                    app:selectionRequired="true"
                    app:layout_constraintTop_toBottomOf="@id/btnSetDate"/>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:layout_constraintTop_toBottomOf="@id/chipGroupRF"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgAttached"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:src="@drawable/outline_image_128"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/pick_an_image"
                    app:layout_constraintTop_toBottomOf="@id/divider"/>

                <com.google.android.material.button.MaterialButton
                    style="?materialButtonOutlinedStyle"
                    android:id="@+id/btnSelectImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_image"
                    app:icon="@drawable/icons8_add_image_256px"
                    app:iconGravity="textStart"
                    app:layout_constraintTop_toBottomOf="@id/imgAttached"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRemoveAttachedImg"
                    style="?materialIconButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:visibility="@{task.imgPath==null||task.imgPath.empty?View.INVISIBLE:View.VISIBLE}"
                    android:contentDescription="@string/remove_attached_image"
                    app:strokeWidth="0dp"
                    app:iconSize="36dp"
                    app:icon="@drawable/round_close_36"
                    app:layout_constraintEnd_toEndOf="@+id/imgAttached"
                    app:layout_constraintTop_toTopOf="@+id/imgAttached"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>